Added SHACL-SHACL validation for the RDFS to SHACL shapes generation. Added Menu item SHACL-SHACL validation; Added option to use sh:class when valueType for association has one class